--- a/Views/Home/SearchUser.cshtml
+++ b/Views/Home/SearchUser.cshtml
@@ -11,21 +11,26 @@
 
 
 @{
-    if (Model.Count() == 0)
+    if (Model.Count() < 1)
     {
         <h1 class="text-center mt-5 text-danger">No searches found</h1>
     }
     else
     {
-        <div class="container mt-5 pl-3">
-            @{
-                foreach (var item in Model)
-                {
-                        <a href="#">@item.FirstName @item.LastName</a>
-                    <br />
-                }
+        
+<div class="container mt-5 pl-3">
+    @{
+        foreach (var item in Model)
+        {
+            if (item.Email != User.Identity.Name)
+            {
+                <a asp-action="Profile" asp-controller="Account" asp-route-email="@item.Email">@item.FirstName @item.LastName</a>
+                <br />
             }
-        </div>
+
+        }
+    }
+</div>
     }
 }
 
