--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -40,7 +40,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group text-center">
-                <input type="submit" value="Login" class="btn btn-block btn-primary" />
+                <input type="submit" value="Login" class="btn btn-block btn-primary login-button" />
             </div>
 
             <div class="text-center">
