--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="col-12 text-center pb-3">
 
         <img class="display-4" width="301" height="106" src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook">
-        <h5>Facebook helps you connect and share with the people in your life.</h5>
+        <h5 class="welcome-text">Facebook helps you connect and share with the people in your life.</h5>
 
     </div>
 
