Translator part done

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,8 +31,22 @@
                 <div class="my-3">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">@post.FirstName @post.LastName</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">@post.PostDateTime</h6>
+                            <div class="row justify-content-between">
+                                <div>
+                                    <h5 class="card-title">@post.FirstName @post.LastName</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">@post.PostDateTime.ToString("f")</h6>
+                                </div>
+                                <div class="row d-flex p-2">
+                                    @{
+                                        string urduBtn = $"urdu-btn-{post.Id}";
+                                        string arabicBtn = $"arabic-btn-{post.Id}";
+                                        string englishBtn = $"english-btn-{post.Id}";
+                                        <button type="button" class="btn btn-secondary mx-2" id="@urduBtn">اردو</button>
+                                        <button type="button" class="btn btn-success mx-2" id="@arabicBtn">العربیہ</button>
+                                        <button type="button" class="btn btn-primary mx-2" id="@englishBtn">English</button>
+                                    }
+                                </div>
+                            </div>
 
                             <hr />
 
@@ -42,7 +56,7 @@
                                 var commentsQty = comments.Where(x => x.PostID == postID).Count();
                             }
 
-                            <p style="white-space: pre-line;" class="card-text" id="@postID">
+                            <p style="white-space: pre-line;" class="card-text userPost" id="@postID">
                                 @post.Post
                             </p>
 
@@ -82,20 +96,68 @@
                     </div>
                 </div>
 
-                @*setting text alignment | English - Urdu - Arabic*@
+
                 <script>
+                    
+                    $(document).ready(function () {
+                        //setting text alignment | English - Urdu - Arabic
+                        setAlignment(@postID);
 
-                    var text = document.getElementById("@postID");
-                    var ifUrduText = s => (/[\u0600-\u06FF]/.test(s[0]));
+                        //calling api to translate
+                        $('#urdu-btn-@postID').click(function () {
+                            translate('ur', @postID);
+                        });
+                        $('#arabic-btn-@postID').click(function () {
+                            translate('ar', @postID);
+                        });
+                        $('#english-btn-@postID').click(function () {
+                            translate('en', @postID);
+                        });
+                    });
 
-                     if (ifUrduText(text.innerText.replace(/[^a-zA-Z \u0600-\u06FF ]/g, '').trim())) {
-
-                         text.classList.add("userPost")
-                    }
                 </script>
+
             }
         }
 
     </div>
 </div>
 
+// Translator
+
+<script>
+    function translate(target_language, postID) {
+        var text = $('#' + postID).text();
+        $.ajax({
+            url: 'http://127.0.0.1:5000/translate',
+            type: 'POST',
+            data: JSON.stringify({ text: text, language: target_language }),
+            contentType: 'application/json; charset=utf-8',
+            headers: {
+                "contentType": "application/json"
+            },
+            success: function (response) {
+                $('#' + postID).text(response.translation);
+                //setting text alignment | English - Urdu - Arabic
+                setAlignment(postID);
+            },
+            error: function (xhr) {
+                console.log(xhr.responseText);
+            }
+        });
+    }
+
+    //setting text alignment | English - Urdu - Arabic
+    function setAlignment(postID) {
+        var text = document.getElementById(postID);
+        var ifUrduText = s => (/[\u0600-\u06FF]/.test(s[0]));
+
+        if (ifUrduText(text.innerText.replace(/[^a-zA-Z \u0600-\u06FF ]/g, '').trim())) {
+
+            text.classList.add("postUrAr")
+        }
+        else {
+            text.classList.remove("postUrAr")
+        }
+    }
+</script>
