--- a/Views/Home/Profile.cshtml
+++ b/Views/Home/Profile.cshtml
@@ -11,6 +11,9 @@
     var postQty = Model.Where(x => x.Email == user.Email).ToList().Count;
     var _commentContext = new CommentContext(_context);
     var comments = await _commentContext.Comments.ToListAsync();
+
+    string Warning = TempData["Warning"]?.ToString() ?? "";
+    string Error = TempData["Error"]?.ToString() ?? "";
 }
 
 <div class="row mx-5">
@@ -34,6 +37,27 @@
     </div>
 
     <div class="col-md-8 py-3" id="PostGrid">
+
+        @{
+            if (!string.IsNullOrWhiteSpace(Warning))
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Warning</strong> <p>@Warning</p>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
+            else if (!string.IsNullOrWhiteSpace(Error))
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Error</strong> <p>@Error</p>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
+        }
 
         @await Html.PartialAsync("~/Views/Partials/_PostBox.cshtml")
 
@@ -71,10 +95,12 @@
 
                                 <hr />
 
-
-                                <p style="white-space: pre-line;" class="card-text" id="@postID">
-                                    @post.Post
-                                </p>
+                                <divv style="max-width: 100%;">
+                                    <p style="white-space: pre-line;" class="card-text" id="@postID">
+                                        @post.Post
+                                    </p>
+                                    <img src="@Url.Content(post.ImagePath)" alt="@post.ImageName" style="max-width: 100%;" />
+                                </divv>
 
                                 @*setting text alignment | English - Urdu - Arabic*@
                                 <script>
