--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     var comments = await _commentContext.Comments.ToListAsync();
 
     string Warning = TempData["Warning"]?.ToString() ?? "";
-    string Error = TempData["Error"]?.ToString() ?? "";
+    //string Error = TempData["Error"]?.ToString() ?? "";
 
 }
 
@@ -35,15 +35,6 @@
             {
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     <strong>Warning</strong> <p>@Warning</p>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            }
-            else if (!string.IsNullOrWhiteSpace(Error))
-            {
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Error</strong> <p>@Error</p>
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -160,7 +151,7 @@
     function translate(target_language, postID) {
         var text = $('#' + postID).text();
         $.ajax({
-            url: 'http://127.0.0.1:5000/translate',
+            url: 'http://127.0.0.1:5000/api/translate',
             type: 'POST',
             data: JSON.stringify({ text: text, language: target_language }),
             contentType: 'application/json; charset=utf-8',
