--- a/Views/Home/Profile.cshtml
+++ b/Views/Home/Profile.cshtml
@@ -24,11 +24,12 @@
 
     </div>
     <div class="col-md-4 py-3">
-        <div class="border p-4 rounded">
-            <h4>
-                <span class="badge badge-pill badge-primary">Profile</span>
-                <a class="badge badge-pill badge-primary text-white" data-toggle="modal" data-target="#EditUserAccount" style="cursor: pointer;">Edit</a>
+        <div class="p-4 rounded-4 bg-white">
+            <h4 class="d-flex justify-content-around">
+                <span class="badge badge-pill badge-primary col-5">Profile</span>
+                <a class="badge badge-pill badge-primary text-white col-5" data-toggle="modal" data-target="#EditUserAccount" style="cursor: pointer;">Edit</a>
             </h4>
+            <hr>
             <h5>Name: @user.FirstName @user.LastName</h5>
             <h5>Email: @user.Email</h5>
             <h5>Phone: @user.PhoneNumber</h5>
@@ -76,14 +77,14 @@
                                                 <h5 class="card-title">@post.FirstName @post.LastName</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted">@post.PostDateTime.ToString("f")</h6>
                                             </div>
-                                            <div class="row d-flex p-2">
+                                            <div class="row d-flex p-2 w-auto">
                                                 @{
                                                     string urduBtn = $"urdu-btn-{post.Id}";
                                                     string arabicBtn = $"arabic-btn-{post.Id}";
                                                     string englishBtn = $"english-btn-{post.Id}";
-                                                    <button type="button" class="btn btn-secondary mx-2" id="@urduBtn">اردو</button>
-                                                    <button type="button" class="btn btn-success mx-2" id="@arabicBtn">العربیہ</button>
-                                                    <button type="button" class="btn btn-primary mx-2" id="@englishBtn">English</button>
+                                                    <button type="button" class="btn btn-secondary mx-2 w-auto" id="@urduBtn">اردو</button>
+                                                    <button type="button" class="btn btn-success mx-2 w-auto" id="@arabicBtn">العربیہ</button>
+                                                    <button type="button" class="btn btn-primary mx-2 w-auto" id="@englishBtn">English</button>
                                                 }
                                             </div>
                                         </div>
@@ -135,7 +136,7 @@
                                 @await Html.PartialAsync("~/Views/Partials/_WriteComment.cshtml", null, new ViewDataDictionary(ViewData) { { "postID", postID } })
 
                                 <div class="row">
-                                    <p class="offset-8 offset-lg-9 offset-md-8 pt-2 text-right" style="cursor: pointer;" onclick="toggleComment('@commentNo')">@commentsQty Comment (s)</p>
+                                    <p class="pt-2 text-right" style="cursor: pointer;" onclick="toggleComment('@commentNo')">@commentsQty Comment (s)</p>
                                 </div>
 
                                 @*comments*@
@@ -149,8 +150,10 @@
                                                     {
                                                         if (post.Id == comment.PostID)
                                                         {
-                                                            <h5>@comment.FirstName</h5>
-                                                            <p>@comment.Comment</p>
+                                                            <div class="bg-white mb-2 p-3 rounded-4 border">
+                                                                <h5>@comment.FirstName</h5>
+                                                                <p class="m-0">@comment.Comment</p>
+                                                            </div>
                                                         }
                                                     }
                                                 }
