--- a/Views/Partials/_PostBox.cshtml
+++ b/Views/Partials/_PostBox.cshtml
@@ -11,10 +11,10 @@
 }
 
 <div class="card">
-    <h5 class="modal-header">
+    <h5 class="modal-header ps-4 pt-3">
         Hi @user.FirstName!
     </h5>
-    <div class="card-body">
+    <div class="card-body pt-0">
 
         <!-- trigger modal -->
         <input type="text" class="form-control rounded-pill" style="cursor: pointer; color: transparent" data-toggle="modal" data-target="#facebookPost" placeholder="What&#x27;s on your mind, @user.FirstName?">
