--- a/Views/Partials/_WriteComment.cshtml
+++ b/Views/Partials/_WriteComment.cshtml
@@ -25,13 +25,13 @@
                 </div>
                 <div class="modal-body">
 
-                    <textarea name="Comment" rows="3" id="commentTextArea_@ViewBag.postID" class="form-control" placeholder="Hi @user.FirstName! Write a comment..."></textarea>
+                    <textarea name="Comment" rows="3" id="commentTextArea_@ViewBag.postID" class="form-control bg-light" placeholder="Hi @user.FirstName! Write a comment..."></textarea>
 
                 </div>
 
                 <div class="modal-footer">
 
-                    <button type="submit" id="commentTextButton_@ViewBag.postID" class="btn btn-block btn-primary" disabled="disabled">Done</button>
+                    <button type="submit" id="commentTextButton_@ViewBag.postID" class="btn btn-block btn-primary rounded-pill" disabled="disabled">Done</button>
                 </div>
             </div>
         </div>
