--- a/Views/Partials/_EditPost.cshtml
+++ b/Views/Partials/_EditPost.cshtml
@@ -32,13 +32,13 @@
                 <div class="modal-body">
                     <h5>@Model.FirstName @Model.LastName</h5>
 
-                    <textarea asp-for="Post" rows="10" id="editPostTextArea" class="form-control  border-0"></textarea>
+                    <textarea asp-for="Post" rows="10" id="editPostTextArea" class="form-control bg-light"></textarea>
 
                 </div>
 
                 <div class="modal-footer">
 
-                    <button type="submit" id="editPostTextButton" class="btn btn-block btn-primary" disabled="disabled">Edit Done</button>
+                    <button type="submit" id="editPostTextButton" class="btn btn-block btn-primary rounded-pill" disabled="disabled">Edit Done</button>
                 </div>
             </div>
         </div>
